--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ a:visited{
 .categories li{
     padding-bottom: 6px;
     border-bottom: dotted 1px #333;
-    list-style-image: url('../check.png');
+    list-style-image: url('check.png');
 }
 
 .my-form{
@@ -165,7 +165,7 @@ a:visited{
     border: 1px solid #000;
     margin-top: 30px;
     position: relative;
-    background-image: url('../bgimage.jpeg');
+    background-image: url('bgimage.jpeg');
 
     background-repeat: no repeat;
     background-position: 100px 200px;
